# prettyplease

./: Cargo.toml
cargo-expand/update/: Cargo.toml
examples/update/: Cargo.toml
src/: algorithm.rs  attr.rs  convenience.rs  data.rs  expr.rs  file.rs  generics.rs  item.rs  lib.rs  lifetime.rs  lit.rs  mac.rs  pat.rs  path.rs  stmt.rs  token.rs  ty.rs
tests/: test.rs  test_precedence.rs
