[package]
name = "leptosfmt-prettyplease"
version = { workspace = true }
authors = ["David Tolnay <dtolnay@gmail.com>"]
autoexamples = false
categories = ["development-tools"]
description = "A fork of David Tolnay's prettyplease that adds the ability to format single expressions"
documentation = "https://docs.rs/prettyplease"
edition = "2021"
exclude = ["cargo-expand"]
keywords = ["rustfmt"]
license = "MIT OR Apache-2.0"
links = "prettyplease02"
repository = "https://github.com/bram209/prettyplease"
rust-version = "1.60"

[features]
verbatim = ["syn/parsing"]

[dependencies]
proc-macro2 = { workspace = true }
syn = { workspace = true }
leptosfmt-pretty-printer = { workspace = true }

[dev-dependencies]
indoc = "2"
proc-macro2 = { version = "1.0.80", default-features = false }
quote = { version = "1.0.35", default-features = false }
syn = { version = "2.0.59", default-features = false, features = ["parsing"] }

[lib]
doc-scrape-examples = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]

[package.metadata.playground]
features = ["verbatim"]
